# ZX-Preparator

./: .gitignore  benchs.txt
ZX-FASM/doc/info/: Ссылки.txt
ZX-FASM/doc/ТЗ/: Описание.txt
ZX-FASM/sources/fasm/: assembly.bat
ZX-FASM/sources/fasm/SOURCE/WIN32/: SYSTEM.INC
data/: 1 Line Space Trader (2007)(Digital Prawn - Saukas, Einar)(16K)[m tzxtools].tap
doc/: Ссылки.txt
doc/ТЗ/: Главный экран.vsdx  ТЗ.docx
soft/emulators/: ZXSpin_07s.rar
soft/taps/: _3D Space Wars.tap  _Another Brick on the Wall.tap
sources/: CMakeLists.txt
sources/SOURCE/: PREPROCE.INC  VARIABLE.INC
sources/SOURCE/WIN32/: FASM.ASM
sources/TAPview/: CMakeLists.txt  Canvas.cpp  Canvas.h  Frame.cpp  Frame.h  ParserTAP.cpp  ParserTAP.h  defines.h  main.cpp
sources/TAPview/src/: Canvas.cpp  Canvas.h  Frame.cpp  Frame.h  Notebook.cpp  Notebook.h  Page.cpp  Page.h  ParserTAP.cpp  ParserTAP.h
sources/TAPview/src/Notebook/: Notebook.h
sources/TAPview/src/Parser/: ParserStructures.cpp  ParserStructures.h  ParserTAP.cpp  ParserTAP.h
sources/ZX-Preparator/: CMakeLists.txt
sources/ZX-Preparator/src/: Application.cpp  Application.h  Canvas.cpp  Canvas.h  Frame.cpp  defines.cpp  defines.h
sources/ZX-Preparator/src/CPU/: DAA.cpp  DAA.h  FuncFirst.h  FuncSecondCB.h  FuncSecondDD.h  FuncSecondED.h  FuncSecondFD.h  FuncThird.h  instr.cpp  instr.h  instrCB.cpp  instrCB.h  instrDD.cpp  instrDD.h  instrED.cpp  instrED.h  instrFD.cpp  instrFD.h  instrFDCB_DDCB.cpp  instrFDCB_DDCB.h  instrShift.cpp  instrShift.h  registers.cpp  registers.h  utils.cpp  utils.h
sources/ZX-Preparator/src/Computer/: RAM.cpp  RAM.h  ports.cpp  ports.h
sources/ZX-Preparator/src/Decompiler/: Command.cpp  Command.h  DLLmain.c  DLLmain.cpp  DLLmain.h  DataBase.cpp  DataBase.h  RAM48.c  RAM48.cpp  RAM48.h  decompiler.cpp  defines.h  main.cpp  stdafx.cpp  stdafx.h
sources/ZX-Preparator/src/Emulator/: Command.cpp  Command.h  DLLmain.cpp  DataBase.cpp  DataBase.h  DecompileROM.cpp  Emulator.cpp  Emulator.h  Instruction.cpp  Instruction.h  Memory.cpp  Memory.h  Memory48.cpp  Memory48.h  RAM48.h  decompiler.cpp
sources/ZX-Preparator/src/Notebook/: Canvas.cpp  Canvas.h  ControlPanel.cpp  ControlPanel.h  Notebook.cpp  Notebook.h  PageASM.cpp  PageASM.h  PageArrayCharacter.cpp  PageArrayCharacter.h  PageArrayNumber.cpp  PageArrayNumber.h  PageBASIC.cpp  PageBASIC.h  PageEdit.cpp  PageEdit.h  PageHEX.cpp  PageHEX.h  PageInfo.cpp  PageInfo.h  PagePureBytes.cpp  PagePureBytes.h  Pages.cpp  Pages.h
sources/ZX-Preparator/src/Notebook/Pages/: PageASM.cpp  PageASM.h  PageArrayCharacter.cpp  PageArrayCharacter.h  PageArrayNumber.cpp  PageArrayNumber.h  PageBASIC.cpp  PageBASIC.h  PageHEX.cpp  PageHEX.h  PageInfo.cpp  PageInfo.h  PagePureBytes.cpp  PagePureBytes.h  Pages.cpp  Pages.h
sources/ZX-Preparator/src/Parser/: ParserStructures.cpp  ParserStructures.h  ParserTAP.cpp  ParserTAP.h
sources/ZX-Preparator/src/Utils/: Configurator.cpp  Configurator.h  Timer.cpp  Timer.h
sources/scripts/: assembly.bat  edit.bat
